Add possible background images and structure to index.html. Add initial styling to style.css.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+     <script src="https://kit.fontawesome.com/5b83da489c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <title>PaintPeruser</title>
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-transparent">
+        <h1>PaintPeruser</h1>
+        <!-- Navbar content -->
+        Take me to..
+        Intro
+        See Colours
+        Quote Me
+      </nav>
+    </header>
+    <div>
+      <h2 class="main-text"> Visualise <br> your <br> space!</h2>
+
     <script src="script.js"></script>
   </body>
 </html>
