--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
     </header>
     <div>
       <h2 class="main-text"> Visualise <br> your <br> space!</h2>
-
+    </div>
+    <section>
+      <div>
+        <h3 class="colour-pick-text">Pick your colour</h3>
+      </div>
+      <div class="container-fluid main-image-container">
+        <img src="../assets/images/sofa-red.jpg">
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
