Add additional colours to index.html and reflect them with css classes and jQuery script to match in the respective files.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
               <option id="azure-blue" value="azure-blue">Azure Blue</option>
               <option id="jewel-green" value="Jewel Green">Jewel Green</option>
               <option id="passion-purple" value="Passion Purple">Passion Purple</option>
-              <option value="Sunshine Yellow">Sunshine Yellow</option>
+              <option id="vivid-pink" value="vivid-pink">Vivid Pink</option>
+              <option id="sunburnt-orange" value="sunburnt-orange">Sunburnt Orange</option>
+              <option id="calming-teal" value="calming-teal">Calming Teal</option>
             </select>
             <button class="btn btn-success" type="submit">Show me!</button>
           </form>
