--- a/index.html
+++ b/index.html
@@ -45,6 +45,62 @@
             <button class="btn btn-success" type="submit">Show me!</button>
           </form>
     </section>
+    <section class="form-container">
+      <div id="email-form" class="card bg-transparent text-center border-dark">
+      <form>
+  <div class="form-row">
+    <div class="form-group col-md-3">
+      <label for="inputPassword">First Name</label>
+      <input type="text" class="form-control" id="inputPassword4" placeholder="First Name">
+    </div>
+    <div class="form-group col-md-3">
+      <label for="inputPassword4">Last Name</label>
+      <input type="text" class="form-control" id="inputPassword4" placeholder="Last Name">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Email</label>
+      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-2">
+      <label for="inputAddress">Colour Choice</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputAddress2">Square Footage Required</label>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="Square Feet">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputCity">City</label>
+      <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputState">State</label>
+      <select id="inputState" class="form-control">
+        <option selected>Choose...</option>
+        <option>...</option>
+      </select>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputZip">Zip</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="gridCheck">
+      <label class="form-check-label" for="gridCheck">
+        Check me out
+      </label>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Sign in</button>
+</form>
+    </div>
+    </section>
     <script src="../assets/js/script.js"></script>
   </body>
 </html>
