--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>PaintPeruser</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("user_HczxxiNyxUaP3rvjWFCd2");
+    })();
+    </script>
   </head>
   <body>
     <header>
@@ -47,60 +55,52 @@
     </section>
     <section class="form-container">
       <div id="email-form" class="card bg-transparent text-center border-dark">
-      <form>
-  <div class="form-row">
-    <div class="form-group col-md-3">
-      <label for="inputPassword">First Name</label>
-      <input type="text" class="form-control" id="inputPassword4" placeholder="First Name">
-    </div>
-    <div class="form-group col-md-3">
-      <label for="inputPassword4">Last Name</label>
-      <input type="text" class="form-control" id="inputPassword4" placeholder="Last Name">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-    </div>
+      <form onsubmit="return sendMail(this);">
+        <div class="form-row">
+          <div class="form-group col-md-3">
+            <label for="fname">First Name</label>
+            <input name="fname" type="text" class="form-control" id="fname" placeholder="First Name" required>
+          </div>
+          <div class="form-group col-md-3">
+            <label for="lname">Last Name</label>
+            <input name="lname" type="text" class="form-control" id="lname" placeholder="Last Name" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="emailaddress">Email</label>
+            <input name="emailaddress" type="email" class="form-control" id="emailaddress" placeholder="Email" required>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-3">
+            <label for="inputAddress">Colour Choice</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="inputAddress2">Square Footage Required</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="Square Feet">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="inputAddress2">Price</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="Price">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="inputAddress2">Quote Number</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="N/A"disabled>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+              Save this for next time!
+            </label>
+          </div>
   </div>
-  <div class="form-row">
-    <div class="form-group col-md-2">
-      <label for="inputAddress">Colour Choice</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputAddress2">Square Footage Required</label>
-      <input type="text" class="form-control" id="inputAddress2" placeholder="Square Feet">
-    </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-      <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
-    </div>
-  </div>
-  <button type="submit" class="btn btn-primary">Sign in</button>
+  <button type="submit" class="btn btn-primary">Send Quote</button>
 </form>
     </div>
     </section>
     <script src="../assets/js/script.js"></script>
+     <script src="../assets/js/emailer.js"></script>
   </body>
 </html>
