--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="colour-dropbox text-center">
         <form method="post" target="_blank">
-            <select class="custom-select custom-select-sm" id="dropdown" name="choose-colour" required aria-label="choose-colour">
+            <select class="custom-select custom-select-sm" id="dropdown" name="choose_colour" required aria-label="choose-colour">
               <option selected disabled value="">Choose a colour</option>
               <option id="blaze-red" value="blaze-red">Blaze Red</option>
               <option id="azure-blue" value="azure-blue">Azure Blue</option>
@@ -73,24 +73,24 @@
         <div class="form-row">
           <div class="form-group col-md-3">
             <label for="inputAddress">Colour Choice</label>
-            <select class="custom-select" id="dropdown-calculator" name="choose-colour" required aria-label="choose-colour">
+            <select class="custom-select" id="dropdown-calculator" name="choose_colour_two" required aria-label="choose-colour">
               <option selected disabled value="">Choose a colour</option>
-              <option id="blaze-red" value="1.0">Blaze Red</option>
-              <option id="azure-blue" value="1.0">Azure Blue</option>
-              <option id="jewel-green" value="1.1">Jewel Green</option>
-              <option id="passion-purple" value="1.3">Passion Purple</option>
-              <option id="vivid-pink" value="1.3">Vivid Pink</option>
-              <option id="sunburnt-orange" value="1.2">Sunburnt Orange</option>
-              <option id="calming-teal" value="1.25">Calming Teal</option>
+              <option id="blaze-red" value="Blaze Red">Blaze Red</option>
+              <option id="azure-blue" value="Azure Blue">Azure Blue</option>
+              <option id="jewel-green" value="Jewel Green">Jewel Green</option>
+              <option id="passion-purple" value="Passion Purple">Passion Purple</option>
+              <option id="vivid-pink" value="Vivid Pink">Vivid Pink</option>
+              <option id="sunburnt-orange" value="Sunburnt Orange">Sunburnt Orange</option>
+              <option id="calming-teal" value="Calming Teal">Calming Teal</option>
             </select>
           </div>
           <div class="form-group col-md-3">
             <label for="inputAddress2">Square Footage Required</label>
-            <input type="text" class="form-control" id="square-feet" placeholder="Square Feet">
+            <input name="square_feet" type="text" class="form-control" id="square-feet" placeholder="Square Feet">
           </div>
           <div class="form-group col-md-3">
             <label for="inputAddress2">Price</label>
-            <input type="text" class="form-control" id="priceBox" placeholder="Price">
+            <input name="price" type="text" class="form-control" id="priceBox" placeholder="Price">
           </div>
           <div class="form-group col-md-3">
             <label for="inputAddress2">Quote Number</label>
