--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
           </div>
           <div class="form-group col-md-3">
             <label for="inputAddress2">Price</label>
-            <input name="price" type="text" class="form-control" id="priceBox" placeholder="Price">
+            <input name="price" type="text" class="form-control" id="priceBox" placeholder="Price" disabled>
           </div>
           <div class="form-group col-md-3">
             <label for="inputAddress2">Quote Number</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="N/A"disabled>
+            <input type="text" class="form-control" id="quoteBox" placeholder="N/A"disabled>
           </div>
         </div>
         <div class="form-group">
