Fix rounding on pricecalculator.js by using Math.floor in sum of price.

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
             <label for="inputAddress">Colour Choice</label>
             <select class="custom-select" id="dropdown-calculator" name="choose_colour_two" required aria-label="choose-colour">
               <option selected disabled value="">Choose a colour</option>
-              <option id="blaze-red" value="Blaze Red">Blaze Red</option>
-              <option id="azure-blue" value="Azure Blue">Azure Blue</option>
-              <option id="jewel-green" value="Jewel Green">Jewel Green</option>
-              <option id="passion-purple" value="Passion Purple">Passion Purple</option>
-              <option id="vivid-pink" value="Vivid Pink">Vivid Pink</option>
-              <option id="sunburnt-orange" value="Sunburnt Orange">Sunburnt Orange</option>
-              <option id="calming-teal" value="Calming Teal">Calming Teal</option>
+              <option value="Blaze Red">Blaze Red</option>
+              <option  value="Azure Blue">Azure Blue</option>
+              <option  value="Jewel Green">Jewel Green</option>
+              <option  value="Passion Purple">Passion Purple</option>
+              <option  value="Vivid Pink">Vivid Pink</option>
+              <option  value="Sunburnt Orange">Sunburnt Orange</option>
+              <option  value="Calming Teal">Calming Teal</option>
             </select>
           </div>
           <div class="form-group col-md-3">
