--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
     <div>
       <h2 class="main-text"> Visualise <br> your <br> space!</h2>
     </div>
-    
+    <div class="container about-container text-center">
+      <div class="row">
+        <div class="col-md-4">
+          <i class="fas fa-palette"></i>
+          <p>Find the colour that you like</p>
+          <p>We offer the below bespoke colours in bulk to reduce your decorating costs</p>
+        </div>
+        <div class="col-md-4">
+          <i class="fas fa-envelope"></i>
+          <p>Fill in your details, measure your square footage and get a price</p>
+          <p>You can even email the completed quote over to yourself. This has on the next steps you can take if you want to proceed.</p>
+        </div>
+        <div class="col-md-4">
+          <i class="fas fa-mobile"></i>
+          <p>Drop us a call or an email and our friendly team of representatives will help.</p>
+          <p>They check your choices, sort your payment and confirm the exact date when our courier will have your choice at your door.</p>
+        </div>
+      </div>
+    </div>
     <section>
       <div>
         <h3 class="colour-pick-text">Pick your colour</h3>
