--- a/index.html
+++ b/index.html
@@ -19,18 +19,33 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-transparent">
-        <h1>PaintPeruser</h1>
-        <!-- Navbar content -->
-        Take me to..
-        Intro
-        See Colours
-        Quote Me
-      </nav>
+      <nav id="mainmenu" class="navbar-transparent navbar-expand-lg navbar">
+      <a id="brand" class="navbar-brand" href="#">PaintPeruser</a>
+  <!-- Button for toggling the visibility of the menu -->
+  <button type="button" data-target="#collapseNavbar" data-toggle="collapse" class="navbar-toggler">
+    <span class="navbar-toggler-icon"><i class="fas fa-bars" style="color:#676767; font-size:28px;"></i></span>
+  </button>
+  <!-- Navigation menu container -->
+  <div class="navbar-collapse collapse" id="collapseNavbar">
+    <!-- Navigation links -->
+    <ul class="navbar-nav ml-auto" id="menu">
+      <li>
+            <a class="nav-link" href="index.html">Intro</a>
+        </li>
+        <li>
+            <a class="nav-link" href="index.html#dropdown">Colours</a>
+        </li>
+        <li>
+            <a class="nav-link" href="index.html#email-form">Quote Me</a>
+        </li>
+    </ul>
+  </div> 
+</nav>
     </header>
     <div>
       <h2 class="main-text"> Visualise <br> your <br> space!</h2>
     </div>
+    <hr class="block-divider block-divider-bottom-margin">
     <div class="container about-container text-center">
       <div class="row">
         <div class="col-md-4">
@@ -54,6 +69,7 @@
       <div>
         <h3 class="colour-pick-text">Pick your colour</h3>
       </div>
+      <hr class="block-divider">
       <div class="container-fluid main-image-container">
         <img id="main-image" src="../assets/images/sofa-red.jpg">
       </div>
@@ -69,9 +85,12 @@
               <option id="sunburnt-orange" value="sunburnt-orange">Sunburnt Orange</option>
               <option id="calming-teal" value="calming-teal">Calming Teal</option>
             </select>
-            <button class="btn btn-success" type="submit">Show me!</button>
           </form>
     </section>
+    <div>
+        <h3 class="colour-pick-text">Get your quote.</h3>
+      </div>
+    <hr class="block-divider block-divider-bottom-margin">
     <section class="form-container">
       <div id="email-form" class="card bg-transparent text-center border-dark">
       <form onsubmit="return sendMail(this);">
@@ -142,5 +161,8 @@
     <script src="../assets/js/pricecalculator.js"></script>
      <script src="../assets/js/emailer.js"></script>
      <script src="../assets/js/savedetails.js"></script>
+     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
