Add a resetDetails function and button, allowing the user to clear their previous details which have been stored, if they wish to.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="form-group">
           <div>
             <button onclick="saveDetails()" type="button" class="btn btn-success">Save these details</button>
-            
+            <button onclick="resetDetails()" type="button" class="btn btn-success">Reset these details</button>
           </div>
   </div>
   <button type="submit" class="btn btn-primary">Send Quote</button>
