Remove excess images and amend font choice and colours across the site.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="index.html">Intro</a>
         </li>
         <li>
-            <a class="nav-link" href="index.html#dropdown">Colours</a>
+            <a class="nav-link" href="index.html#main-image">Colours</a>
         </li>
         <li>
             <a class="nav-link" href="index.html#email-form">Quote Me</a>
