--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
   <div class="modal" id="myModal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
+    <div class="modal-content text-center">
       <div class="modal-header">
         <h5 class="modal-title">Contact Details</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -170,7 +170,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Modal body text goes here.</p>
+        <p><i class="fas fa-envelope"></i>  dwrightdevmail@gmail.com</p>
+        <p><i class="fas fa-phone-alt"></i> 01234 567890</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
