Remove excess images and amend background image along with navbar color to match on index.html.

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
   </div>
   <div class="social">
     <a data-toggle="modal" data-target="#myModal" href="#myModal" class="support">Contact Us</a>
-    <a href="#" class="face">f</a>
-    <a href="#" class="tweet">t</a>
-    <a href="#" class="linked">in</a>
+    <a href="www.facebook.com" class="face">f</a>
+    <a href="www.twitter.com" class="tweet">t</a>
+    <a href="www.linkedin.com" class="linked">in</a>
   </div>
   </footer>
   </div>
