--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       </div>
       <hr class="block-divider">
       <div class="container-fluid main-image-container">
-        <img id="main-image" class="default-hue" src="../assets/images/sofa-red.jpg">
+        <img id="main-image" class="default-hue main-image" src="../assets/images/sofa-red.jpg">
+        <img class="main-image-overlay" src="../assets/images/sofa-red-overlay.png">
       </div>
       <div class="colour-dropbox text-center">
         <form method="post" target="_blank">
