Add buttons above main image on index.html to change css classes. This should be more user friendly than the dropdown and can be styled.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
         <h3 class="colour-pick-text">Pick your colour</h3>
       </div>
       <hr class="block-divider">
+      <div class="col-md-12 text-center">
+        <div class="btn-group btn-group-sm colour-buttons" role="group" aria-label="Basic example">
+          <button type="button" id="blaze-red-btn" class="btn btn-secondary">Blaze Red</button>
+          <button type="button" id="azure-blue-btn" class="btn btn-secondary">Azure Blue</button>
+          <button type="button" id="jewel-green-btn" class="btn btn-secondary">Jewel Green</button>
+          <button type="button" id="passion-purple-btn" class="btn btn-secondary">Purple Passion</button>
+          <button type="button" id="vivid-pink-btn" class="btn btn-secondary">Vivid Pink</button>
+          <button type="button" id="sunburnt-orange-btn" class="btn btn-secondary">Sunburnt Orange</button>
+          <button type="button" id="calming-teal-btn" class="btn btn-secondary">Calming Teal</button>
+        </div>
+      </div>
       <div class="container-fluid main-image-container">
         <img id="main-image" class="default-hue main-image" src="../assets/images/sofa-red.jpg">
         <img class="main-image-overlay" src="../assets/images/sofa-red-overlay.png">
