Amend data toggle value on navbar so that the bar auto-collapses on a click outside, instead of having to click the three bars a second time.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav id="mainmenu" class= "navbar-expand-lg navbar fixed-top">
       <a id="brand" class="navbar-brand" href="#">PaintPeruser</a>
   <!-- Button for toggling the visibility of the menu -->
-  <button type="button" data-target="#collapseNavbar" data-toggle="collapse" class="navbar-toggler">
+  <button type="button" data-target="#collapseNavbar" data-toggle="dropdown" class="navbar-toggler">
     <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
   </button>
   <!-- Navigation menu container -->
