--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="form-row">
           <div class="form-group col-md-3">
-            <label for="inputAddress">Colour Choice</label>
+            <label for="colour_choice">Colour Choice</label>
             <select class="custom-select" id="dropdown-calculator" name="choose_colour_two" required aria-label="choose-colour">
               <option selected disabled value="">Choose a colour</option>
               <option value="Blaze Red">Blaze Red</option>
@@ -141,16 +141,16 @@
             </select>
           </div>
           <div class="form-group col-md-3">
-            <label for="inputAddress2">Square Footage Required</label>
+            <label for="square_feet">Square Footage Required</label>
             <input name="square_feet" type="text" class="form-control" id="square-feet" placeholder="Square Feet" required>
           </div>
           <div class="form-group col-md-3">
-            <label for="inputAddress2">Price</label>
+            <label for="price">Price</label>
             <input name="price" type="text" class="form-control" id="priceBox" placeholder="Price" disabled>
           </div>
           <div class="form-group col-md-3">
-            <label for="inputAddress2">Quote Number</label>
-            <input type="text" class="form-control" id="quoteBox" placeholder="N/A"disabled>
+            <label for="quote_number">Quote Number</label>
+            <input name="quote" type="text" class="form-control" id="quoteBox" placeholder="N/A"disabled>
           </div>
         </div>
         <div class="form-group">
