Add detail of design decisions to readme.md along with wireframe images for both desktop and mobiles.

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         </div>
       </div>
       <div class="container-fluid main-image-container">
-        <img id="main-image" class="default-hue" src="../assets/images/sofa-red.jpg">
-        <img class="main-image-overlay" src="../assets/images/sofa-red-overlay.png">
+        <img id="main-image" class="default-hue" src="assets/images/sofa-red.jpg">
+        <img class="main-image-overlay" src="assets/images/sofa-red-overlay.png">
       </div>
       <!-- <div class="colour-dropbox text-center">
         <form method="post" target="_blank">
