--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="index.html">Intro</a>
         </li>
         <li>
-            <a class="nav-link" href="index.html#colour-buttons">Colours</a>
+            <a class="nav-link" href="index.html#colour-pick-text">Colours</a>
         </li>
         <li>
             <a class="nav-link" href="index.html#email-form">Quote Me</a>
@@ -70,7 +70,7 @@
     </div>
     <section>
       <div>
-        <h3 class="colour-pick-text">Pick your colour</h3>
+        <h3 id="colour-pick-text" class="colour-pick-text">Pick your colour</h3>
       </div>
       <hr class="block-divider">
       <div class="col-md-12 text-center">
@@ -88,19 +88,6 @@
         <img id="main-image" class="default-hue" src="assets/images/sofa-red.jpg">
         <img class="main-image-overlay" src="assets/images/sofa-red-overlay.png">
       </div>
-      <!-- <div class="colour-dropbox text-center">
-        <form method="post" target="_blank">
-            <select class="custom-select custom-select-sm" id="dropdown" name="choose_colour" required aria-label="choose-colour">
-              <option selected disabled id="choose-default" value="">Choose a colour</option>
-              <option id="blaze-red" value="Blaze Red">Blaze Red</option>
-              <option id="azure-blue" value="Azure Blue">Azure Blue</option>
-              <option id="jewel-green" value="Jewel Green">Jewel Green</option>
-              <option id="passion-purple" value="Passion Purple">Passion Purple</option>
-              <option id="vivid-pink" value="Vivid Pink">Vivid Pink</option>
-              <option id="sunburnt-orange" value="Sunburnt Orange">Sunburnt Orange</option>
-              <option id="calming-teal" value="Calming Teal">Calming Teal</option>
-            </select>
-          </form> -->
       <div class="text-center">
         <button type="button" id="pick-me-btn" class="btn btn-secondary">Choose this colour</button>
       </div>
