--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <input name="square_feet" type="text" class="form-control" id="square-feet" placeholder="Square Feet" required>
           </div>
           <div class="form-group col-md-3">
-            <label for="price">Price</label>
+            <label for="priceBox">Price</label>
             <input name="price" type="text" class="form-control" id="priceBox" placeholder="Price" disabled>
           </div>
           <div class="form-group col-md-3">
