Change button colours to meet wave validator check for contrast levels, allowing easier readability.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a id="brand" class="navbar-brand" href="#">PaintPeruser</a>
   <!-- Button for toggling the visibility of the menu -->
   <button type="button" data-target="#collapseNavbar" data-toggle="dropdown" class="navbar-toggler">
-    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+    <span aria-label="three-bar-button" class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
   </button>
   <!-- Navigation menu container -->
   <div class="navbar-collapse collapse " id="collapseNavbar" >
@@ -89,7 +89,7 @@
         <img class="main-image-overlay" src="assets/images/sofa-red-overlay.png" alt="Overlay allowing the background colour to change.">
       </div>
       <div class="text-center">
-        <button type="button" id="pick-me-btn" class="btn btn-secondary">Choose this colour</button>
+        <button type="button" id="pick-me-btn" class="btn btn-primary">Choose this colour</button>
       </div>
     </section>
     <div>
