--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
         </button>
       </div>
       <div class="modal-body">
-        <p><i class="fas fa-envelope"></i>  dwrightdevmail@gmail.com</p>
-        <p><i class="fas fa-phone-alt"></i> 01234 567890</p>
+        <a href="mailto:dwrightdevmail@gmail.com"><i class="fas fa-envelope"></i>  dwrightdevmail@gmail.com</a>
+        <!---->
+        <br></br>
+        <a href="tel:+441234567890"><i class="fas fa-phone-alt"></i> 01234 567890</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -176,9 +178,9 @@
   </div>
   <div class="social">
     <a data-toggle="modal" data-target="#myModal" href="#myModal" class="support">Contact Us</a>
-    <a href="www.facebook.com" class="face">f</a>
-    <a href="www.twitter.com" class="tweet">t</a>
-    <a href="www.linkedin.com" class="linked">in</a>
+    <a href ="https://www.facebook.com" target="_blank" aria-label="link-to-facebook" class="face">f</a>
+    <a href ="https://www.twitter.com" target="_blank" aria-label="link-to-twitter" class="tweet">t</a>
+    <a href ="https://www.linkedin.com" target="_blank" aria-label="link-to-linkedin" class="linked">in</a>
   </div>
   </footer>
     <script src="assets/js/script.js"></script>
