Add additional media query styling to style.css. Additional change to index.html to reflect amendments requested by validation programs.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav id="mainmenu" class= "navbar-expand-lg navbar fixed-top">
-      <a id="brand" class="navbar-brand" href="#">PaintPeruser</a>
+      <a id="brand" class="navbar-brand" href="index.html">PaintPeruser</a>
   <!-- Button for toggling the visibility of the menu -->
   <button type="button" data-target="#collapseNavbar" data-toggle="dropdown" class="navbar-toggler">
     <span aria-label="three-bar-button" class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -162,7 +162,7 @@
       <div class="modal-body">
         <a href="mailto:dwrightdevmail@gmail.com"><i class="fas fa-envelope"></i>  dwrightdevmail@gmail.com</a>
         <!---->
-        <br></br>
+        <br>
         <a href="tel:+441234567890"><i class="fas fa-phone-alt"></i> 01234 567890</a>
       </div>
       <div class="modal-footer">
