Add user story detail and walkthroughs to readme.md. Image upload incomplete due to file hosting issues.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a id="brand" class="navbar-brand" href="index.html">PaintPeruser</a>
   <!-- Button for toggling the visibility of the menu -->
   <button type="button" data-target="#collapseNavbar" data-toggle="dropdown" class="navbar-toggler">
-    <span aria-label="three-bar-button" class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
   </button>
   <!-- Navigation menu container -->
   <div class="navbar-collapse collapse " id="collapseNavbar" >
@@ -154,7 +154,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content text-center">
       <div class="modal-header">
-        <h5 class="modal-title">Contact Details</h5>
+        <h4 class="modal-title">Contact Details</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
