Add comments to style.css to ensure clarity of future reading.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
       </div>
       <!--Underlying image and overlay image. id=main-image changes with CSS and id=main-image-overlay does not. Default hue is the standard overlay which greyscales the background wall.-->
       <div class="container-fluid main-image-container">
+        <!--Image credit to CAMACHO03 - https://pixabay.com/photos/sofa-orange-cushion-furniture-5213406/-->
         <img id="main-image" class="default-hue" src="assets/images/sofa-red.jpg" alt="Red Sofa and changing background.">
+        <!-- Overlay edited by Dan W, using replace.bg -->
         <img class="main-image-overlay" src="assets/images/sofa-red-overlay.png" alt="Overlay allowing the background colour to change.">
       </div>
       <!--Button to pull the current choice down into the form box - links with JS in script.js (pick-me-btn)  -->
