Add screenshots of validation to readme.md

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
         <!--Step 1 - Find colour -->
         <div class="col-md-4">
           <i class="details-icon fas fa-palette"></i>
-          <p>Find the colour that you like</p>
-          <p>We offer the below bespoke colours in bulk to reduce your decorating costs</p>
+          <p>Find the colour that you like.</p>
+          <p>We offer the below bespoke colours in bulk to reduce your decorating costs.</p>
         </div>
         <!--Step 2 - Enter details -->
         <div class="col-md-4">
           <i class="details-icon fas fa-envelope"></i>
-          <p>Fill in your details, measure your square footage and get a price</p>
+          <p>Fill in your details, measure your square footage and get a price.</p>
           <p>You can even email the completed quote over to yourself. This has on the next steps you can take if you want to proceed.</p>
         </div>
         <!--Contact CTA -->
